# v4vapp-binance

./: README.md  pyproject.toml
src/v4vapp_binance/: binance.py  binance_connect.py  main.py
tests/: sample.env  test_api_key_failure.py  test_binance.py  test_binance_testnet.py  test_main.py
