[tool.poetry]
name = "v4vapp-binance"
version = "0.1.0"
description = "A tool for matched trading on Binance"
authors = ["Brian of London (home imac) <brian@v4v.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
binance-connector = "^3.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88